# OBSOLETE-plasma-nm-wireguard

./: CMakeLists.txt  README.md  nm-wireguard-service.h  plasmanetworkmanagement_wireguardui.desktop  wireguard.cpp  wireguard.h  wireguard.ui  wireguardadvanced.ui  wireguardadvancedwidget.cpp  wireguardadvancedwidget.h  wireguardauth.cpp  wireguardauth.h  wireguardutils.cpp  wireguardutils.h  wireguardwidget.cpp  wireguardwidget.h
